static/css/main.css
/* ... */
.tx-in .col-12,
.tx-out .col-12,
.tx-addr .col-12 {
    background-color: white;
    padding: 1.2rem 1.3rem;
    border-bottom: 1px solid #f6f6f6;
}

.amt-out {
    padding: 1.2rem 0 1.2rem 1rem;
    text-align: right;
    overflow-wrap: break-word;
}

.tx-in .col-12:last-child,
.tx-out .col-12:last-child {
    border-bottom: none;
}

.tx-own {
    background-color: #fff9e3 !important;
}

.tx-amt {
    float: right !important;
}

.tx-io-toggle {
    display: block;
    width: 100%;
    background-color: #f6f6f6;
    border: 1px solid #e2e2e2;
    border-radius: 0.5rem;
    padding: 0.4rem 1.1rem;
    margin-bottom: 0.4rem;
    color: #757575;
    font-size: 0.85em;
    font-weight: bold;
    text-align: center;
    cursor: pointer;
}

.tx-io-toggle+.row+.tx-io-toggle {
    margin-bottom: 0;
    margin-top: 0.4rem;
}

.tx-io-toggle:hover {
    color: black;
    background-color: #f6f6f6;
    border-color: #e2e2e2;
}

.tx-io-toggle::after {
    content: " \25BC";
}

.tx-io-toggle[aria-expanded="true"]::after {
    content: " \25B2";
}

.spent {
    color: #dc3545 !important;
}

.unspent {
    color: #28a745 !important;
}

.outpoint {
    color: #757575 !important;
}

.spent,
.unspent,
.outpoint {
    display: inline-block;
    text-align: right;
    min-width: 18px;
    text-decoration: none !important;
}

.octicon {
    height: 24px;
    width: 24px;
    margin-left: -12px;
    margin-top: 19px;
    position: absolute;
    background-size: cover;
    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 4.5L16.5 12L9 19.5' stroke='%23AFAFAF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
}

.txvalue {
    color: var(--bs-body-color);
    font-weight: bold;
}

.txerror {
    color: #c51f13;
}

.txerror a,
.txerror .txvalue {
    color: #c51f13;
}

.txerror .copyable::before,
.txerror .copied::before {
    /* turn svg stroke to red */
    filter: invert(86%) sepia(43%) saturate(732%) hue-rotate(367deg) brightness(84%);
}

.tx-amt .amt:hover,
.tx-amt.amt:hover,
.amt-out>.amt:hover {
    color: var(--bs-body-color);
}

.prim-amt {
    display: initial;
}

.sec-amt {
    display: none;
}

.csec-amt {
    display: none;
}

.base-amt {
    display: none;
}

.cbase-amt {
    display: none;
}

.tooltip {
    --bs-tooltip-opacity: 1;
    --bs-tooltip-max-width: 380px;
    --bs-tooltip-bg: #fff;
    --bs-tooltip-color: var(--bs-body-color);
    --bs-tooltip-padding-x: 1rem;
    --bs-tooltip-padding-y: 0.8rem;
    filter: drop-shadow(0px 24px 64px rgba(22, 27, 45, 0.25));
}

.l-tooltip {
    text-align: start;
    display: inline-block;
}

.l-tooltip .prim-amt,
.l-tooltip .sec-amt,
.l-tooltip .csec-amt,
.l-tooltip .base-amt,
.l-tooltip .cbase-amt {
    display: initial;
    float: right;
}

.l-tooltip .amt-time {
    padding-right: 3rem;
    float: left;
}

.amt-dec {
    font-size: 95%;
}

.unconfirmed {
    color: white;
    background-color: #c51e13;
    padding: 0.7rem 1.2rem;
    border-radius: 1.4rem;
}

.json {
    word-wrap: break-word;
    font-size: smaller;
    background: #002b31;
    border-radius: 8px;
}

#raw {
    padding: 1.5rem 2rem;
    color: #ffffff;
    letter-spacing: 0.02em;
}

#raw .string {
    color: #2bca87;
}

#raw .number,
#raw .boolean {
    color: #efc941;
}

#raw .null {
    color: red;
}

@media (max-width: 768px) {
    body {
        font-size: 0.8rem;
        background: linear-gradient(to bottom, #f6f6f6 500px, #e5e5e5 0), #e5e5e5;
    }

    .container {
        padding-left: 2px;
        padding-right: 2px;
    }

    .accordion-body {
        padding: var(--bs-accordion-body-padding-y) 0;
    }

    .octicon {
        scale: 60% !important;
        margin-top: -2px;
    }

    .unconfirmed {
        padding: 0.1rem 0.8rem;
    }

    .btn {
        --bs-btn-font-size: 0.8rem;
    }
}

@media (max-width: 991px) {
    #header .container {
        min-height: 40px;
    }

    #header .dropdown-menu[data-bs-popper] {
        left: 0;
        right: initial;
    }

    .trezor-logo {
        top: 10px;
    }

    .octicon {
        scale: 80%;
    }

    .table.data-table>:not(caption)>*>* {
        padding: 0.8rem 0.4rem;
    }

    .tx-in .col-12,
    .tx-out .col-12,
    .tx-addr .col-12 {
        padding: 0.7rem 1.1rem;
    }

    .amt-out {
        padding: 0.7rem 0 0.7rem 1rem
    }
}

@media (min-width: 769px) {
    body {
        font-size: 0.9rem;
    }

    .btn {
        --bs-btn-font-size: 0.9rem;
    }
}

@media (min-width: 1200px) {

    .h1,
    h1 {
        font-size: 2.4rem;
    }

    body {
        font-size: 1rem;
    }

    .btn {
        --bs-btn-font-size: 1rem;
    }
}

